[package]
name = "subfrost-alkanes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test-utils = []
test = []

[dependencies]
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
types-support = { path = "crates/types-support" }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = "1.0.94"
bitcoin = { version = "0.32.4", features = ["rand"] }
hex = "0.4.3"
once_cell = "1.19.0"
wasm-bindgen-test = "0.3.0"
protobuf = "3.3.0"

[dev-dependencies]
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }
metashrew = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }
hex_lit = "0.1.1"

[build-dependencies]
anyhow = "1.0.90"
flate2 = "1.0.34"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.99"

[workspace]
members = [".", "crates/*"]
