[package]
name = "subfrost-alkanes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test = []
test-utils = []
testnet = []
dogecoin = []
luckycoin = []
bellscoin = []
fractal = []
mainnet = []

[workspace]
members = ["crates/*", ".", "alkanes/*"]

[dependencies]
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
types-support = { path = "crates/types-support" }
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }
metashrew = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = "1.0.94"
bitcoin = { version = "0.32.4", features = ["rand"] }
hex = "0.4.3"
once_cell = "1.19.0"
wasm-bindgen = "0.2.99"
wasm-bindgen-test = "0.3.49"
hex_lit = "0.1.1"
web-sys = { version = "0.3.67", features = ["console"] }

[dev-dependencies]
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }
metashrew = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }
dx-btc = { path = "./alkanes/dx-btc", features = ["test"] }
hex_lit = "0.1.1"

[build-dependencies]
anyhow = "1.0.90"
flate2 = "1.0.34"
hex = "0.4.3"
