[package]
name = "subfrost-alkanes"
version = "0.1.0"
edition = "2021"

[features]
test = []
testnet = []
dogecoin = []
luckycoin = []
bellscoin = []
fractal = []
mainnet = []
debug-log = ["alkanes/debug-log"]

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["alkanes/*", 'crates/*']

[workspace.dependencies]
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs"}
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkanes-std-factory-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = "1.0.94"
bitcoin = { version = "0.32.4", features = ["rand"] }
hex = "0.4.3"
num = "0.4.3"
ruint = "1.13.1"

[dependencies]
alkanes-support = { workspace = true }
alkanes-runtime = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
ordinals = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
num = { workspace = true }
ruint = { workspace = true }


[dev-dependencies]
alkanes = { git = "https://github.com/kungfuflex/alkanes-rs", features = [
    "test-utils"
] }
metashrew-core = { git = "https://github.com/sandshrewmetaprotocols/metashrew", features = [
    "test-utils",
] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", features = [
    "test-utils",
] }
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.49"
hex_lit = "0.1.1"

[build-dependencies]
anyhow = "1.0.90"
flate2 = "1.0.34"
hex = "0.4.3"
