[package]
name = "FROST"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test = []

[dependencies]
alkanes-support = { git = "https:/github.com/kungfuflex/alkanes-rs" }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkane-factory-support = { path = "../../crates/alkane-factory-support" }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = "1.0.94"
bitcoin = { version = "0.32.4", features = ["rand"] }
