[package]
name = "fr-btc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test = []
testnet = []
dogecoin = []
luckycoin = []
bellscoin = []
fractal = []
mainnet = []
test-hooks = []


[dependencies]
fr-btc-support = { path = "../../crates/fr-btc-support" }
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkanes-std-factory-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
types-support = { path = "../../crates/types-support" }
anyhow = "1.0.94"
bitcoin = { version = "0.32.5", features = ["rand"] }
ordinals = {workspace = true}