[package]
name = "fr-sigil"
version = "0.5.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-runtime = { workspace = true }
alkanes-support = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
alkanes-std-factory-support = { workspace = true }
