[package]
name = "types-support"
version = "0.1.0"
edition = "2021"
description = "frBTC types"
repository = "https://github.com/subfrost/subfrost-alkanes"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { git = "https:/github.com/kungfuflex/alkanes-rs" }
alkanes-runtime = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-support = { workspace=true  }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
anyhow = "1.0.94"
bitcoin = { version = "0.32.4", features = ["rand"] }
